CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(Viewer_OpenGL)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(Threads REQUIRED)

set(TBB_DIR "K:\\Dependency\\tbb\\cmake")
find_package(TBB REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(PROJECT_ASSET_DIR "${CMAKE_SOURCE_DIR}/asset/")
SET(ROOT_DIR "${PROJECT_SOURCE_DIR}")
#SET(AGZ_ENABLE_D3D11 ON)
#SET(AGZ_ENABLE_D3D12 ON)
SET(AGZ_ENABLE_GL ON)
#SET(AGZ_ENABLE_OPENGL ON)

link_directories(${PROJECT_SOURCE_DIR}/lib)
# assimp
include_directories(
        ${PROJECT_SOURCE_DIR}/include/assimp-5.2.4/include/
        ${PROJECT_SOURCE_DIR}/include/glm/
        ${PROJECT_SOURCE_DIR}/include/
)

ADD_SUBDIRECTORY("K:/Dependency/agz-utils/" lib/)
#TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_UTILS_SSE _UNICODE)
#SET_TARGET_PROPERTIES(AGZUtils PROPERTIES FOLDER "ThirdParty")

ADD_SUBDIRECTORY(src/m_common)

ADD_SUBDIRECTORY(src/test)
ADD_SUBDIRECTORY(src/HardShadow)
ADD_SUBDIRECTORY(src/PCF)
ADD_SUBDIRECTORY(src/PCSS)
ADD_SUBDIRECTORY(src/VSM)
ADD_SUBDIRECTORY(src/IBL)
ADD_SUBDIRECTORY(src/testDebug)
ADD_SUBDIRECTORY(src/testAll)
ADD_SUBDIRECTORY(src/PRT)
ADD_SUBDIRECTORY(src/RSM)
ADD_SUBDIRECTORY(src/RSM_v2)
ADD_SUBDIRECTORY(src/PRT_Rendering)
ADD_SUBDIRECTORY(src/LPV)
ADD_SUBDIRECTORY(src/SSAO)
ADD_SUBDIRECTORY(src/SSDO)
ADD_SUBDIRECTORY(src/HBAO)
ADD_SUBDIRECTORY(src/GTAO)
ADD_SUBDIRECTORY(src/SSR)